--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <p></p>
       </div>
       <div class="contact-links">
-        <a  href="https://www.twitch.tv/stealthawk98" > <img  class="link-logo" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c540.png"> </a>
+        <a  href="https://www.twitch.tv/stealthawk98" > <img  class="link-logo" src="/Images/TwitchGlitchPurple.png"> </a>
         <a  href="https://github.com/stealthawk98" > <img  class="link-logo" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
         <a  href="https://mail.google.com/mail/u/0/#inbox" > <img class="link-logo" src="https://assets.stickpng.com/thumbs/584856b4e0bb315b0f7675ac.png"> </a>
         <a  href="www.linkedin.com/in/dustin-lefave" > <img  class="link-logo" src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG22.png"> </a>
