--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="contact-links">
         <a  href="https://www.twitch.tv/stealthawk98" > <img  class="link-logo" src=./images/TwitchGlitchPurple.png> </a>
         <a  href="https://github.com/stealthawk98" > <img  class="link-logo" src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </a>
-        <a  href="https://mail.google.com/mail/u/0/#inbox" > <img class="link-logo" src=./images/Emailimage.png> </a>
+        <a  href="https://mail.google.com/mail/u/0/#inbox" > <img class="link-logo" src=./images/EmailImage.png> </a>
         <a  href="www.linkedin.com/in/dustin-lefave" > <img  class="link-logo" src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG22.png"> </a>
         <a  href="https://www.instagram.com/stealthawk98/?hl=en" > <img  class="link-logo" src="https://cdn1.iconfinder.com/data/icons/social-signature/512/Instagram_Color-512.png"> </a>
 
