changed work to projects
changed work to projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
         <nav-bar id="navbar" >
           <a href="#about">About</a>
-          <a href="#projects">Work</a>
+          <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
         
         </nav-bar>
