--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2>These are some of my projects</h2>
     <div class="project-tile">
 
-      <a id="profile-link" href="https://stealthawk98.github.io/Waggin_tails_website/" target="_blank" class="project project-tile"><img src="https://stealthawk98.github.io/Waggin_tails_website/Images/gooddog.jpeg" alt="waggin tails brewery image"> 
+      <a id="profile-link" href="https://www.sofi.com/invite/money?gcp=8a43691d-2b9e-4272-aba0-35c0e2e502c4&isAliasGcp=false" target="_blank" class="project project-tile"><img src="https://stealthawk98.github.io/Waggin_tails_website/Images/gooddog.jpeg" alt="waggin tails brewery image"> 
 
       <p class="projects subtext-tile">This is my first website I built<p>
 </a>
